# hfst-predict

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  config.h.in  hfst-predict.cc
